--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "luxon": "^3.6.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
