--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pnr-converter-vercel",
+  "name": "pnr‑converter‑vercel",
   "version": "1.0.0",
   "description": "PNR Converter for Vercel",
   "private": true,
@@ -13,10 +13,10 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "express-rate-limit": "^6.11.2",
-    "helmet": "^7.2.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.48",
+    "moment-timezone": "^0.6.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.1"
   }
