--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pnr‑converter‑vercel",
+  "name": "pnr-converter-vercel",
   "version": "1.0.0",
   "description": "PNR Converter for Vercel",
   "private": true,
